-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
None
-
Qt Creator 7.0.0
-
None
-
MacBook Pro (M1), macOS 12.1, Apple clang version 13.0.0 (clang-1300.0.29.30)
-
-
42cc29902 (12.0)
For projects configured with CMakeFile.txt instead of qmake, Qt Creator > Build > Build File "xxx.cpp" fails with
make: *** No rule to make target `xxx.cpp.o'. Stop.
Is there a way to build individual source files for projects that have transitioned to CMake?
- relates to
-
QTCREATORBUG-18898 Add support for compiling single file when using CMake project
-
- Closed
-
| For Gerrit Dashboard: QTCREATORBUG-27471 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 515406,8 | CMakePM: Detect C/C++ object extension for single source build | 12.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |